all actions on child

--- a/app/views/pages/profil.html.erb
+++ b/app/views/pages/profil.html.erb
@@ -15,3 +15,5 @@
  <li> <%= link_to "🗑", child, method: :delete, data: { confirm: "Are you sure ?" } %></li>
 <% end %>
 </ul>
+
+<%= link_to "Create a child", new_child_path %>
