--- a/app/views/children/edit.html.erb
+++ b/app/views/children/edit.html.erb
@@ -10,6 +10,6 @@
 			<%= f.input :respiratory,
                input_html: { autocomplete: "Respiratory", class: "input-line full-width" } %>
             <%= f.input :prematurity,
-                        input_html: { autocomplete: "Pespiratory", class: "input-line full-width" } %>
+                        input_html: { autocomplete: "Prematurity", class: "input-line full-width" } %>
 			<%= f.submit "Modifiez votre enfant", class: "btn btn-outline-secondary btn-lg mb-2" %>
 <% end %>
