--- a/app/views/analyses/new.html.erb
+++ b/app/views/analyses/new.html.erb
@@ -1,1 +1,7 @@
-<h1>New Analyse</h1>
+<h1>New Analysis</h1>
+
+<ul>
+  <% @analyses.each do |symptom| %>
+    <li><%= analyses.symptoms %></li>
+  <% end %>
+</ul>
