--- a/app/views/analyses/direction.html.erb
+++ b/app/views/analyses/direction.html.erb
@@ -1,1 +1,3 @@
-<h1>Map des hopitaux les plus proches</h1>
+<div id="map"
+     style="width: 50%; height: 600px;"
+     data-mapbox-api-key="<%= ENV["MAPBOX_API_KEY"] %>"></div>
