--- a/app/views/analyses/new.html.erb
+++ b/app/views/analyses/new.html.erb
@@ -1,7 +1,5 @@
-<h1>New Analysis</h1>
-
-<ul>
-  <% @analyses.each do |symptom| %>
-    <li><%= analyses.symptoms %></li>
-  <% end %>
-</ul>
+<h1>Symptoms</h1>
+<%= simple_form_for([@child, @analysis]) do |f| %>
+			<%= f.input :symptoms, collection: @symptoms, as: :check_boxes, label_on: :left %>
+			<%= f.submit "Analyse", class: "btn btn-outline-secondary btn-lg mb-2" %>
+<% end %>
