--- a/app/views/hospitals/direction.html.erb
+++ b/app/views/hospitals/direction.html.erb
@@ -1,3 +1,4 @@
 <div id="map"
      style="width: 50%; height: 600px;"
+     data-markers="<%= @markers.to_json %>"
      data-mapbox-api-key="<%= ENV["MAPBOX_API_KEY"] %>"></div>
