--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,11 @@
 .navbar-lewagon {
+  display:flex;
   justify-content: space-between;
   background: white;
+  width: 100%;
+  top: 0px;
+  left: 0px;
+
 }
 
 .navbar-lewagon .navbar-collapse {
