--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,7 +1,9 @@
 // Specific CSS for your home-page
+
 body{
 	display: flex;
 	justify-content:center;
 	align-items: center;
 	flex-direction:column;
+	font-family: 'Montserrat', sans-serif !important;
 }
