--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 <%= link_to "Diag non urgent", diseases_path %>
-<%= link_to "Urgence Enfants !", create_urgence_path %>
+<%= link_to "Urgence Enfants !", new_urgence_path %>
 <%= link_to "Connection", profil_path %>
 <%= link_to "show", disease_path(Disease.last) %>
 
