--- a/app/views/hospitals/direction.html.erb
+++ b/app/views/hospitals/direction.html.erb
@@ -1,4 +1,34 @@
 <div id="map"
-     style="width: 50%; height: 600px;"
+     style="width: 100%; height: 400px;"
      data-markers="<%= @markers.to_json %>"
      data-mapbox-api-key="<%= ENV["MAPBOX_API_KEY"] %>"></div>
+
+<h2>Votre ville :</h2>
+
+<div class="search">
+   <form novalidate="novalidate" class="simple_form search" action="/services" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
+		<div class="search-form-control form-group">
+			<input class="form-control string required" type="text" name="query" id="search_query" />
+			<button name="button" type="submit" class="btn btn-flat">
+			<i class="fas fa-search"></i> Search
+			</button>
+		</div>
+	</form>
+</div>
+
+<footer>
+	<div id="navbar-contenair">
+		<div class="icon_name">
+		<i class="fas fa-home"></i>
+		<%= link_to "Home", root_path, class: "link-footer" %>
+		</div>
+		<div class="icon_name">
+		<i class="far fa-user-circle"></i>
+		<%= link_to "Profil", profil_path, class: "link-footer" %>
+		</div>
+		<div class="icon_name">
+		<i class="fas fa-book-open"></i>
+		<%= link_to "Préventions", diseases_path, class: "link-footer" %>
+		</div>
+	</div>
+</footer>
