--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,27 +1,15 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-<%= link_to "Diag non urgent", diseases_path %>
-<%= link_to "Urgence Enfants !", new_urgence_path %>
-<%= link_to "Connection", profil_path %>
-<%= link_to "show", disease_path(Disease.first) %>
 
-<div class="contenair">
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum ut nemo expedita animi excepturi dolorum soluta ipsam accusamus corporis quaerat ad reiciendis, eligendi illum tempora vero modi ducimus sunt saepe. <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, ipsam? Laborum reiciendis officiis similique nesciunt dolor veritatis placeat sequi delectus nobis omnis, facere odit quasi, deleniti aut? Est, sequi optio. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit laborum amet, maxime commodi unde voluptate corporis ipsam facilis rerum! Saepe vitae modi porro harum rerum omnis veniam libero nulla temporibus. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae explicabo ipsam earum natus ipsum ab laboriosam molestiae fugiat rem facilis qui eligendi, eius dolorum aut consequuntur tempora accusamus laudantium pariatur. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit laborum amet, maxime commodi unde voluptate corporis ipsam facilis rerum! Saepe vitae modi porro harum rerum omnis veniam libero nulla temporibus. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae explicabo ipsam earum natus ipsum ab laboriosam molestiae fugiat rem facilis qui eligendi, eius dolorum aut consequuntur tempora accusamus laudantium pariatur.</p>
+<div class="ellipse-background">
+	<%= image_tag "background.png", class: "image-home" %>
 </div>
 
-<footer>
-	<div id="navbar-contenair">
-		<div class="icon_name">
-		<i class="fas fa-home"></i>
-		<%= link_to "Home", root_path, class: "link-footer" %>
-		</div>
-		<div class="icon_name">
-		<i class="far fa-user-circle"></i>
-		<%= link_to "Profil", profil_path, class: "link-footer" %>
-		</div>
-		<div class="icon_name">
-		<i class="fas fa-book-open"></i>
-		<%= link_to "Préventions", diseases_path, class: "link-footer" %>
-		</div>
+<%= link_to "Urgence Enfants !", new_urgence_path %>
+
+<%= link_to "show", disease_path(Disease.first) %>
+
+<div class="ellipse-background-return">
+	<div class="btn-home">
+	<%= link_to "Connection", profil_path %>
 	</div>
-</footer>
+</div>
+
