--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,3 +1,11 @@
 #map{
 	margin: 10px;
 }
+.mapboxgl-popup {
+	max-width: 200px;
+  }
+  
+  .mapboxgl-popup-content {
+	text-align: center;
+	font-family: 'Open Sans', sans-serif;
+  }
