--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -7,5 +7,5 @@
   
   .mapboxgl-popup-content {
 	text-align: center;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Montserrat', sans-serif !important;
   }
