--- a/app/assets/stylesheets/components/_ellipse-background.scss
+++ b/app/assets/stylesheets/components/_ellipse-background.scss
@@ -1,8 +1,8 @@
 .ellipse-background {
     background-color: #66BBEC;
     width: 100%;
-    height: 300px;
-    border-radius: 90% / 50%;
+    height: 270px;
+    border-radius: 90% / 30%;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
     transform: rotate(180deg);
@@ -20,8 +20,8 @@
 .ellipse-background-return {
     background-color: #66BBEC;
     width: 100%;
-    height: 300px;
-    border-radius: 90% / 50%;
+    height: 270px;
+    border-radius: 90% / 30%;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
     display:flex;
@@ -55,4 +55,12 @@
     color: white;
     font-weight: bolder;
     border-radius: 25px;
+}
+
+.btn-placement{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    padding:33px;
+    margin:5px;
 }
