--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,8 +4,5 @@
 @import "navbar";
 @import "footer";
 @import "map";
-<<<<<<< HEAD
-@import "diseases_show";
-=======
+@import "diseases-show";
 @import "ellipse-background";
->>>>>>> b41c93f9c8a8d28e0df561fb83e1098a0e63d758
