fix position img

--- a/app/assets/stylesheets/components/_ellipse-background.scss
+++ b/app/assets/stylesheets/components/_ellipse-background.scss
@@ -12,9 +12,10 @@
 }
 
 .image-home {
-    width: 150px;
-    height: 150px;
+    width: 225px;
+    height: 225px;
     transform: rotate(180deg);
+    margin-right: 15px;
 }
 
 .ellipse-background-return {
