--- a/app/views/pages/profil.html.erb
+++ b/app/views/pages/profil.html.erb
@@ -13,6 +13,7 @@
  <li>Prematurity <%= child.prematurity %></li>
  <li> <%= link_to "🖍", edit_child_path(child) %></li>
  <li> <%= link_to "🗑", child, method: :delete, data: { confirm: "Are you sure ?" } %></li>
+ <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
 <% end %>
 </ul>
 
