--- a/app/views/pages/new_urgence.html.erb
+++ b/app/views/pages/new_urgence.html.erb
@@ -9,6 +9,5 @@
                input_html: { autocomplete: "Respiratory", class: "input-line full-width" } %>
             <%= f.input :prematurity,
                         input_html: { autocomplete: "Prematurity", class: "input-line full-width" } %>
-			<%= link_to "Suivant urgent", direction_path, class: "btn btn-outline-secondary btn-lg mb-2" %>
-			<%= link_to "Suivant non urgent", disease_path(Disease.first), class: "btn btn-outline-secondary btn-lg mb-2" %>
+			<%= f.submit "Analyse", class: "btn btn-outline-secondary btn-lg mb-2" %>
 <% end %>
