--- a/app/assets/stylesheets/components/_diseases-show.scss
+++ b/app/assets/stylesheets/components/_diseases-show.scss
@@ -4,10 +4,9 @@
     height: 152px;
     background-color: #19ABFF;
     font-size: 24px;
-    font-family: 'Montserrat', sans-serif !important;
+    margin: 20px;
     font-weight: bolder;
     color: white;
-    margin: 16px;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
     display: flex;
     justify-content: center;
@@ -22,13 +21,12 @@
     border-radius: 19px;
     background-color: #53B7FF;
     font-size: 24px;
-    font-family: 'Montserrat', sans-serif !important;
-    font-weight: bolder;
+    font-weight: 1000;
     color: white;
     width: 264px;
+    margin: 20px;
     height: 109px;
     box-shadow: drop;
-    margin: 16px;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
     display: flex;
     justify-content: center;
@@ -40,14 +38,13 @@
 
 .btn-outline-primary3 {
     font-size: 24px;
-    font-family: 'Montserrat', sans-serif !important;
-    font-weight: bolder;
+    font-weight: 1000;
     color: white;
     border-radius: 19px;
     background-color: #6CC9FF;
     width: 264px;
+    margin: 20px;
     height: 109px;
-    margin: 16px;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
     display: flex;
     justify-content: center;
@@ -64,8 +61,8 @@
     border-radius: 19px;
     background-color: #7ED0FF;
     width: 264px;
+    margin: 20px;
     height: 53px;
-    margin: 16px;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
     display: flex;
     justify-content: center;
@@ -73,4 +70,9 @@
 }
 .btn-outline-primary4:hover {
     color:white;
+}
+
+ul {
+margin: 40px;
+padding: 20px;
 }
