--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -9,3 +9,10 @@
 	text-align: center;
 	font-family: 'Montserrat', sans-serif !important;
   }
+
+  h6 {
+	  text-align: center;
+  }
+  h4 {
+	text-align: center;
+}
