--- a/app/views/hospitals/direction.html.erb
+++ b/app/views/hospitals/direction.html.erb
@@ -1,9 +1,10 @@
 <div id="map"
-     style="width: 80%; height: 400px;"
+     style="width: 100%; height: 300px;"
      data-markers="<%= @markers.to_json %>"
      data-mapbox-api-key="<%= ENV["MAPBOX_API_KEY"] %>"></div>
+<h4>L'état de votre enfant nécessite une consultation médicale urgente.</h2>
+<h6>Trouvez l'hôpital le plus proche de vous.</h6>
 <footer>
-<h2>Trouvez l'hôpital le plus proche de vous.</h2>
 	<div id="navbar-contenair">
 		<div class="icon_name">
 		<i class="fas fa-home"></i>
