--- a/app/views/pages/new_urgence.html.erb
+++ b/app/views/pages/new_urgence.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <%= simple_form_for(@child) do |f| %>
 			<%= f.input :birth_date,
                input_html: { autocomplete: "Birth date", class: "input-line full-width" } %>
@@ -12,3 +13,4 @@
 			<%= link_to "Suivant urgent", direction_path, class: "btn btn-outline-secondary btn-lg mb-2" %>
 			<%= link_to "Suivant non urgent", disease_path(Disease.first), class: "btn btn-outline-secondary btn-lg mb-2" %>
 <% end %>
+</div>
