--- a/app/views/diseases/consult.html.erb
+++ b/app/views/diseases/consult.html.erb
@@ -1,19 +1,25 @@
-<%= link_to "Précédent", disease_path, class: "btn btn-outline-primary-precedent" %>
-<h1>Quand consulter ?</h1>
-<p><%= @disease.when_consult %></p>
-<footer>
-	<div id="navbar-contenair">
-		<div class="icon_name">
-		<i class="fas fa-home"></i>
-		<%= link_to "Home", root_path, class: "link-footer" %>
-		</div>
-		<div class="icon_name">
-		<i class="far fa-user-circle"></i>
-		<%= link_to "Profil", profil_path, class: "link-footer" %>
-		</div>
-		<div class="icon_name">
-		<i class="fas fa-book-open"></i>
-		<%= link_to "Préventions", diseases_path, class: "link-footer" %>
-		</div>
+<div class="container">	
+	<div class=" d-flex justify-content-end">
+		<%= link_to "Précédent", disease_path, class: "btn btn-outline-primary-precedent" %>
 	</div>
-</footer>
+	<div class="container-card px-4 py-3 ">
+		<h1 class="d-flex justify-content-center">Quand consulter ?</h1>
+		<p><%= @disease.when_consult %></p>
+	</div>
+	<footer>
+		<div id="navbar-contenair">
+			<div class="icon_name">
+			<i class="fas fa-home"></i>
+			<%= link_to "Home", root_path, class: "link-footer" %>
+			</div>
+			<div class="icon_name">
+			<i class="far fa-user-circle"></i>
+			<%= link_to "Profil", profil_path, class: "link-footer" %>
+			</div>
+			<div class="icon_name">
+			<i class="fas fa-book-open"></i>
+			<%= link_to "Préventions", diseases_path, class: "link-footer" %>
+			</div>
+		</div>
+	</footer>
+</div>
