--- a/app/views/diseases/prevention.html.erb
+++ b/app/views/diseases/prevention.html.erb
@@ -1,21 +1,26 @@
-<%= link_to "Précédent", disease_path, class: "btn btn-outline-primary-precedent" %>
-<div class="container-card">
-	<h1>Prévention</h1>
-	<p><%= @disease.prevention %></p>
-</div>
-<footer>
-	<div id="navbar-contenair">
-		<div class="icon_name">
-		<i class="fas fa-home"></i>
-		<%= link_to "Home", root_path, class: "link-footer" %>
-		</div>
-		<div class="icon_name">
-		<i class="far fa-user-circle"></i>
-		<%= link_to "Profil", profil_path, class: "link-footer" %>
-		</div>
-		<div class="icon_name">
-		<i class="fas fa-book-open"></i>
-		<%= link_to "Préventions", diseases_path, class: "link-footer" %>
-		</div>
+<div class="container">
+	<div class=" d-flex justify-content-end">
+		<%= link_to "Précédent", disease_path, class: "btn btn-outline-primary-precedent" %>
 	</div>
-</footer>
+  <div class="container-card px-4 py-3 ">
+    <h1 class="d-flex justify-content-center">Prévention</h1>
+    <p><%= @disease.prevention %></p>
+  </div>
+  <footer>
+    <div id="navbar-contenair">
+      <div class="icon_name">
+      <i class="fas fa-home"></i>
+      <%= link_to "Home", root_path, class: "link-footer" %>
+      </div>
+      <div class="icon_name">
+      <i class="far fa-user-circle"></i>
+      <%= link_to "Profil", profil_path, class: "link-footer" %>
+      </div>
+      <div class="icon_name">
+      <i class="fas fa-book-open"></i>
+      <%= link_to "Préventions", diseases_path, class: "link-footer" %>
+      </div>
+    </div>
+  </footer>
+</div>
+
