--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,6 @@
-<h2>Sign up</h2>
+<div id="banner">
+  <%= image_tag "background.png", class: "image-connexion" %>
+</div>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
@@ -7,27 +9,43 @@
     <%= f.input :first_name,
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "first_name" } %>
+                input_html: { autocomplete: "first_name", class: "btn-login" } %>
     <%= f.input :last_name,
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "last_name" } %>
+                input_html: { autocomplete: "last_name", class: "btn-login" } %>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "email" } %>
+                input_html: { autocomplete: "email", class: "btn-login" } %>
     <%= f.input :password,
                 required: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
+                input_html: { autocomplete: "new-password", class: "btn-login" } %>
     <%= f.input :password_confirmation,
                 required: true,
-                input_html: { autocomplete: "new-password" } %>
+                input_html: { autocomplete: "new-password", class: "btn-login" } %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <%= f.button :submit, "Sign up", class: "btn-connexion" %>
+    <%= link_to "Tu possèdes un compte ? Viens ici.", new_user_session_path, class: "btn-link-login" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<footer>
+  <div id="navbar-contenair">
+    <div class="icon_name">
+    <i class="fas fa-home"></i>
+    <%= link_to "Home", root_path, class: "link-footer" %>
+    </div>
+    <div class="icon_name">
+    <i class="far fa-user-circle"></i>
+    <%= link_to "Profil", profil_path, class: "link-footer" %>
+    </div>
+    <div class="icon_name">
+    <i class="fas fa-book-open"></i>
+    <%= link_to "Préventions", diseases_path, class: "link-footer" %>
+    </div>
+  </div>
+</footer>
