add for Michmich

--- a/app/views/diseases/index.html.erb
+++ b/app/views/diseases/index.html.erb
@@ -1,3 +1,14 @@
+<h1>Fiches Prévention</h1>
+<ul>
+<li><%= link_to "Diarrhée", prevention_path(@disease) %></li>
+<li><%= link_to "Fièvre", prevention_path(@disease) %></li>
+<li><%= link_to "Bronchiolite", prevention_path(@disease) %></li>
+<li><%= link_to "Gastro-Entérite", prevention_path(@disease) %></li>
+<li><%= link_to "Brûlures", prevention_path(@disease) %></li>
+</ul>
+
+
+
 <footer>
 	<div id="navbar-contenair">
 		<div class="icon_name">
