--- a/app/views/pages/profil.html.erb
+++ b/app/views/pages/profil.html.erb
@@ -1,12 +1,16 @@
 <div class="container-user">
-    <ul>
+    <ul class="ul-profil">
+        <div class="user-name">
     <li><%= current_user.first_name %></li>
     <li><%= current_user.last_name %></li>
+    </div>
+    <div class="user-mail">
     <li><%= current_user.email %></li>
+    </div>
     </ul>
 </div>
 <div class="container-children">
-    <ul>
+    <ul class="ul-profil-2">
     <% @children.each do |child| %>
     <li><%= child.first_name %></li>
     <li><%= child.birth_date %></li>
@@ -16,10 +20,12 @@
     <li>Prematurity <%= child.prematurity %></li>
     <li> <%= link_to "🖍", edit_child_path(child) %></li>
     <li> <%= link_to "🗑", child, method: :delete, data: { confirm: "Are you sure ?" } %></li>
-    <li><%= link_to "Déconnexion", destroy_user_session_path, method: :delete %></li>
     <% end %>
     </ul>
+
 </div>
+  <%= link_to "Déconnexion", destroy_user_session_path, method: :delete %>
+<%= link_to "Ajoutez votre enfant", new_child_path %>
 
     <footer>
         <div id="navbar-contenair">
@@ -37,5 +43,3 @@
             </div>
         </div>
     </footer>
-
-<%= link_to "Ajoutez votre enfant", new_child_path %>
