--- a/app/views/analyses/new.html.erb
+++ b/app/views/analyses/new.html.erb
@@ -1,13 +1,15 @@
 <div class="titre-checkbox">
 <h2>Symptomes</h2>
 </div>
-<form class="form">
+<!-- <form class="form"> -->
   <div class="inputGroup">
 <%= simple_form_for([@child, @analysis]) do |f| %>
 			<%= f.input :symptoms, collection: @symptoms, as: :check_boxes, label_on: :left %>
 			 </div>
-</form>
-			<%= f.submit "Analyse", class: "btn-analyse-home" %>
+             <%= f.submit "Analyse", class: "btn-analyse-home" %>
+
+<!-- </form> -->
+			
 <% end %>
 
 
