--- a/app/assets/stylesheets/components/_profil.scss
+++ b/app/assets/stylesheets/components/_profil.scss
@@ -22,6 +22,32 @@
 }
 
 .ul-profil-2{
-	padding: 0 !important;
-	margin: 0 !important;
+	padding: 10px !important;
+	margin: 10px !important;
+	border:1px solid lightgrey;
+	box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
+	position:relative;
+}
+
+.trash{
+	position: absolute;
+    right: 0px;
+    top: 0px;
+    padding: 10px;
+}
+
+.edit{
+
+	position: absolute;
+    right: 25px;
+    top: 0px;
+    padding: 10px;
+}
+
+.container-profil{
+
+  margin: 10px;
+  padding: 10px;
+  position:relative;
+
 }
