--- a/app/views/diseases/behavior.html.erb
+++ b/app/views/diseases/behavior.html.erb
@@ -1,6 +1,6 @@
 <%= link_to "Précédent", disease_path, class: "btn btn-outline-primary-precedent" %>
 <h1>Conduite à tenir</h1>
-<p><%= @disease.behavior %></p>
+<p><%= raw @disease.behavior %></p>
 <footer>
 	<div id="navbar-contenair">
 		<div class="icon_name">
