--- a/app/views/diseases/consult.html.erb
+++ b/app/views/diseases/consult.html.erb
@@ -1,6 +1,6 @@
 <%= link_to "Précédent", disease_path, class: "btn btn-outline-primary-precedent" %>
 <h1>Quand consulter ?</h1>
-<p><%= @disease.when_consult %></p>
+<p><%= raw @disease.when_consult %></p>
 <footer>
 	<div id="navbar-contenair">
 		<div class="icon_name">
