--- a/app/views/diseases/need_know.html.erb
+++ b/app/views/diseases/need_know.html.erb
@@ -1,6 +1,6 @@
 <%= link_to "Précédent", disease_path, class: "btn btn-outline-primary-precedent" %>
 <h1>Ce qu'il faut savoir</h1>
-<p><%= @disease.need_know %></p>
+<p><%= raw @disease.need_know %></p>
 <footer>
 	<div id="navbar-contenair">
 		<div class="icon_name">
