--- a/app/assets/stylesheets/components/_profil.scss
+++ b/app/assets/stylesheets/components/_profil.scss
@@ -1,53 +1,83 @@
-.container-user{
+.container-user {}
 
-}
-
-.user-name{
-	    display:flex;
+.user-name {
+    display: flex;
     justify-content: space-around;
     margin-right: 200px;
     margin-bottom: 10px;
 }
 
-.user-mail{
-	    margin-left: 5px;
+.user-mail {
+    margin-left: 5px;
 }
 
-.ul-profil{
-	border-bottom: 1px solid black;
+.ul-profil {
+    border-bottom: 1px solid #66BBEC;
 }
 
-.container-children{
+.container-children {}
 
+.ul-profil-2 {
+    padding: 10px !important;
+    margin: 10px !important;
+    border: 1px solid lightgrey;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
+    position: relative;
 }
 
-.ul-profil-2{
-	padding: 10px !important;
-	margin: 10px !important;
-	border:1px solid lightgrey;
-	box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
-	position:relative;
-}
-
-.trash{
-	position: absolute;
+.trash {
+    position: absolute;
     right: 0px;
     top: 0px;
     padding: 10px;
 }
 
-.edit{
-
-	position: absolute;
+.edit {
+    position: absolute;
     right: 25px;
     top: 0px;
     padding: 10px;
 }
 
-.container-profil{
+.container-profil {
+    margin: 10px;
+    padding: 10px;
+    position: relative;
 
-  margin: 10px;
-  padding: 10px;
-  position:relative;
+}
 
+#deco-ajout {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 15px;
+    margin-top: -35px;
+    height: 25vh;
+}
+
+.btn-deconnexion {
+    margin: 35px;
+    width: 140px;
+    border-radius: 5px;
+    background-color: #EBEFEA;
+    color: black;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
+    text-align: center;
+}
+
+.btn-ajout-enfant {
+    margin: 35px;
+    width: 210px;
+    border-radius: 5px;
+    background-color: #EBEFEA;
+    color: black;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
+    text-align: center;
+}
+
+.link-cards:hover{
+  color: black;
+}
+.link-cards{
+  color: black;
 }
