--- a/app/assets/stylesheets/components/_ellipse-background.scss
+++ b/app/assets/stylesheets/components/_ellipse-background.scss
@@ -1,27 +1,29 @@
 .ellipse-background {
     background-color: #66BBEC;
-    width: 100%;
-    height: 270px;
+	width: 100%;
+	height: 30vh;
     border-radius: 90% / 30%;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
     transform: rotate(180deg);
     display: flex;
+	position: static;
     justify-content: center;
     align-items: center;
 }
 
 .image-home {
-    width: 225px;
-    height: 225px;
+    height: 25vh;
     transform: rotate(180deg);
     margin-right: 15px;
+    display: flex;
+	position: absolute;
 }
 
 .ellipse-background-return {
     background-color: #66BBEC;
-    width: 100%;
-    height: 270px;
+	width: 100%;
+    height: 30vh;
     border-radius: 90% / 30%;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
@@ -59,9 +61,10 @@
 }
 
 .btn-placement{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    padding:33px;
-    margin:5px;
+	padding: 33px;
+	height: 40vh;
+	margin: 5px;
+	display: flex;
+	justify-content: center;
+    align-items: center;
 }
