--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,9 +2,9 @@
 	<%= image_tag "background.png", class: "image-home" %>
 </div>
 <div class="btn-placement">
-<%= link_to "Urgence Enfants !", new_urgence_path, class: "btn-home-1" %>
+<%= link_to "Urgence Enfant !", new_urgence_path, class: "btn-home-1" %>
 </div>
 <div class="ellipse-background-return">
-	<%= link_to "Connection", profil_path, class: "btn-home" %>
+	<%= link_to "Connexion", profil_path, class: "btn-home" %>
 </div>
 
