--- a/app/views/pages/new_urgence.html.erb
+++ b/app/views/pages/new_urgence.html.erb
@@ -1,5 +1,7 @@
 
 <%= simple_form_for(@child) do |f| %>
+			<%= f.input :first_name,
+               input_html: { autocomplete: "First date", class: "input-line full-width" } %>
 			<%= f.input :birth_date,
                input_html: { autocomplete: "Birth date", class: "input-line full-width" } %>
                <%= f.input :weight,
