--- a/app/assets/stylesheets/components/_index_diseases.scss
+++ b/app/assets/stylesheets/components/_index_diseases.scss
@@ -17,11 +17,10 @@
 
 .list-diseases {
 	background-color: #FE7988;
-	margin: 20px;
-	display: flex;
-	justify-content: center;
-	font-size: 24px;
-	width: 300px;
 	color: white;
-	border-radius: 0% 0% 40%;
+	display: inline-block;
+	transform: skewX(-15deg);
+	margin:15px;
+	min-width: 300px;
+	text-align: center; 
 }
