--- a/app/views/diseases/index.html.erb
+++ b/app/views/diseases/index.html.erb
@@ -3,11 +3,13 @@
 </div>
 <div class="prev-container px-4 py-3">
 	<div class="card-diseases d-flex justify-content-center">
+		<div class="test">
 		<ul>
 			<% @diseases.each do |disease| %>
 			<li><%= link_to disease.name, prevention_path(disease), class: "list-diseases" %></li>
 			<% end %>		
 		</ul>
+		</div>
 	</div>	
 </div>
 
