--- a/app/views/diseases/prevention.html.erb
+++ b/app/views/diseases/prevention.html.erb
@@ -19,7 +19,7 @@
       </div>
       <div class="icon_name">
       <i class="fas fa-book-open"></i>
-      <%= link_to "Préventions", diseases_path, class: "link-footer" %>
+      <%= link_to "Index", diseases_path, class: "link-footer" %>
       </div>
     </div>
   </footer>
