--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,6 +6,7 @@ body {
 	flex-direction:column;
 	font-family: 'Montserrat', sans-serif !important;
 	background-color: white;
+	width: 100vw;
 }
 
 ul {
