--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,8 +1,10 @@
 #navbar-contenair {
 	background-color: #ABE0FF;
-	display: flex;
-	justify-content: space-around;
-	width: 100%;
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+	width: 100vw;
 	position:fixed;
     bottom: 0px;
     left: 0px;
