--- a/app/assets/stylesheets/components/_btn_precedent.scss
+++ b/app/assets/stylesheets/components/_btn_precedent.scss
@@ -6,3 +6,8 @@ width: 129px;
 height: 37px;
 margin-bottom: 10px;
 }
+
+.btn-outline-primary-precedent:hover{
+	text-decoration: none;
+	color: white;
+}
