--- a/app/assets/stylesheets/components/_diseases-show.scss
+++ b/app/assets/stylesheets/components/_diseases-show.scss
@@ -14,6 +14,7 @@
 }
 .btn-outline-primary1:hover {
     color:white;
+    text-decoration: none;
 }
 
 
@@ -34,6 +35,7 @@
 }
 .btn-outline-primary2:hover {
     color:white;
+    text-decoration: none;
 }
 
 .btn-outline-primary3 {
@@ -52,6 +54,7 @@
 }
 .btn-outline-primary3:hover {
     color:white;
+    text-decoration: none;
 }
 
 .btn-outline-primary4 {
@@ -70,6 +73,7 @@
 }
 .btn-outline-primary4:hover {
     color:white;
+    text-decoration: none;
 }
 
 ul {
