--- a/app/assets/stylesheets/components/_ellipse-background.scss
+++ b/app/assets/stylesheets/components/_ellipse-background.scss
@@ -50,6 +50,12 @@
     background-color: white;
     color:#FE7988;
 }
+
+.btn-home:hover{
+    text-decoration: none;
+    color:#FE7988;
+}
+
 .btn-home-1 {
     padding:30px;
     margin:20px;
@@ -60,6 +66,11 @@
     border-radius: 25px;
 }
 
+.btn-home-1:hover{
+    text-decoration: none;
+    color: white;
+}
+
 .btn-placement{
 	padding: 33px;
 	height: 40vh;
@@ -67,4 +78,8 @@
 	display: flex;
 	justify-content: center;
     align-items: center;
+}
+
+.btn-placement:hover{
+    text-decoration: none;
 }
