--- a/app/assets/stylesheets/components/_page-checkbox.scss
+++ b/app/assets/stylesheets/components/_page-checkbox.scss
@@ -10,10 +10,6 @@
     justify-content: center;
 }
 
-.form-check-panel{
-    display:flex;
-    justify-content:space-between;
-}
 
 .inputGroup {
     background-color: #fff;
@@ -23,7 +19,7 @@
 
     label {
         padding: 12px 30px;
-        width: 100%;
+        width: 100vw;
         display: block;
         text-align: left;
         color: #3C454C;
@@ -133,7 +129,7 @@ code {
     color: white;
     font-weight: bolder;
     border-radius: 25px;
-    margin-left: 100px;
+    margin-top: 50px;
 
 }
 
