--- a/app/assets/stylesheets/components/_cards_diseases.scss
+++ b/app/assets/stylesheets/components/_cards_diseases.scss
@@ -1,5 +1,5 @@
 .container-card {
-    text-align: justify;
+    // text-align: justify;
     background-color: white;
     box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
     border-radius: 5px;
