--- a/app/views/hospitals/direction.html.erb
+++ b/app/views/hospitals/direction.html.erb
@@ -4,6 +4,11 @@
      data-mapbox-api-key="<%= ENV["MAPBOX_API_KEY"] %>"></div>
 <h4>L'état de votre enfant nécessite une consultation médicale urgente.</h2>
 <h6>Trouvez l'hôpital le plus proche de vous.</h6>
+<div id="container-secours">
+	<%= image_tag "UE_SECOURS.png", class: "image-secours" %>
+	<%= image_tag "POMPIER_SECOURS.png", class: "image-secours" %>
+	<%= image_tag "SAMU_SECOURS.png", class: "image-secours" %>
+</div>
 <footer>
 	<div id="navbar-contenair">
 		<div class="icon_name">
