--- a/app/views/hospitals/direction.html.erb
+++ b/app/views/hospitals/direction.html.erb
@@ -1,27 +1,28 @@
-<div id="map"
-     style="width: 100%; height: 300px;"
-     data-markers="<%= @markers.to_json %>"
-     data-mapbox-api-key="<%= ENV["MAPBOX_API_KEY"] %>"></div>
+<div id="map" style="width: 100%; height: 300px;" data-markers="<%= @markers.to_json %>" data-mapbox-api-key="<%= ENV[" MAPBOX_API_KEY"] %>"></div>
 <h4>L'état de votre enfant nécessite une consultation médicale urgente.</h2>
 <h6>Trouvez l'hôpital le plus proche de vous.</h6>
 <div id="container-secours">
-	<%= image_tag "UE_SECOURS.png", class: "image-secours" %>
-	<%= image_tag "POMPIER_SECOURS.png", class: "image-secours" %>
-	<%= image_tag "SAMU_SECOURS.png", class: "image-secours" %>
+	<a href="tel:0616403054">
+		<%= image_tag "UE_SECOURS.png", class: "image-secours" %>
+	</a>
+	<a href="tel:0616403054">
+	<%= image_tag "POMPIER_SECOURS.png", class: "image-secours" %></a>
+	<a href="tel:0616403054">
+	<%= image_tag "SAMU_SECOURS.png", class: "image-secours" %></a>
 </div>
 <footer>
 	<div id="navbar-contenair">
 		<div class="icon_name">
-		<i class="fas fa-home"></i>
-		<%= link_to "Home", root_path, class: "link-footer" %>
+			<i class="fas fa-home"></i>
+			<%= link_to "Home", root_path, class: "link-footer" %>
 		</div>
 		<div class="icon_name">
-		<i class="far fa-user-circle"></i>
-		<%= link_to "Profil", profil_path, class: "link-footer" %>
+			<i class="far fa-user-circle"></i>
+			<%= link_to "Profil", profil_path, class: "link-footer" %>
 		</div>
 		<div class="icon_name">
-		<i class="fas fa-book-open"></i>
-		<%= link_to "Index", diseases_path, class: "link-footer" %>
+			<i class="fas fa-book-open"></i>
+			<%= link_to "Index", diseases_path, class: "link-footer" %>
 		</div>
 	</div>
 </footer>
