--- a/app/views/children/new.html.erb
+++ b/app/views/children/new.html.erb
@@ -1,15 +1,22 @@
 <%= simple_form_for(@child) do |f| %>
 			<%= f.input :first_name,
+         label: "Prénom",
                input_html: { autocomplete: "Name", class: "input-line full-width" } %>
 			<%= f.input :birth_date,
-               input_html: { autocomplete: "Birth date", class: "input-line full-width" } %>
+         label: "Date de naissance",
+               input_html: { autocomplete: "Birth date",
+                class: "input-line full-width" } %>
                <%= f.input :weight,
+               label: "Poids (Kg)",
                            input_html: { autocomplete: "Weight", class: "input-line full-width" } %>
 			<%= f.input :cardiac,
+         label: "Cardiaque",
                input_html: { autocomplete: "Cardiac", class: "input-line full-width" } %>
 			<%= f.input :respiratory,
+         label: "Respiratoire",
                input_html: { autocomplete: "Respiratory", class: "input-line full-width" } %>
             <%= f.input :prematurity,
+            label: "Prématuré",
                         input_html: { autocomplete: "Prematurity", class: "input-line full-width" } %>
 			<%= f.submit "Ajoutez votre enfant", class: "btn btn-outline-secondary btn-lg mb-2" %>
 <% end %>
