--- a/app/views/diseases/behavior.html.erb
+++ b/app/views/diseases/behavior.html.erb
@@ -1,5 +1,8 @@
 
 <div class="container">	
+	<div class="chiante">
+	<a href="tel:0616403054" class="a-link-secours">En cas de doute ou d'urgence vitale appelez le 15 ici !</a>
+	</div>
 	<div class=" d-flex justify-content-end">
 		<%= link_to "Précédent", :back, class: "btn btn-outline-primary-precedent" %>
 	</div>
@@ -7,6 +10,7 @@
 		<h1 class="d-flex justify-content-center">Conduite à tenir</h1>
 		<p><%= raw @disease.behavior %></p>
 	</div>
+
 	<footer>
 		<div id="navbar-contenair">
 			<div class="icon_name">
