--- a/app/views/diseases/consult.html.erb
+++ b/app/views/diseases/consult.html.erb
@@ -1,5 +1,8 @@
 
 <div class="container">	
+	<div class="chiante">
+	<a href="tel:0616403054" class="a-link-secours">En cas de doute ou d'urgence vitale appelez le 15 ici !</a>
+	</div>
 	<div class=" d-flex justify-content-end">
 		<%= link_to "Précédent", :back, class: "btn btn-outline-primary-precedent" %>
 	</div>
