--- a/app/assets/stylesheets/components/_new_urgence.scss
+++ b/app/assets/stylesheets/components/_new_urgence.scss
@@ -53,3 +53,15 @@ border-radius: 10px;
   .form-control {
       box-shadow: none !important;
   }
+
+  input[type=checkbox].hidden{
+   display:none;
+}
+
+.clickable.active i {
+    color: #52ACF4;
+  }
+  
+  .form-check-input {
+    list-style-type: none !important;
+  }
