--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,5 +1,6 @@
 #map {
     margin: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
 }
 
 .mapboxgl-popup {
@@ -9,7 +10,12 @@
 .mapboxgl-popup-content {
     text-align: center;
     font-family: 'Montserrat', sans-serif !important;
+
+    h2 {
+        font-size: 1rem;
+    }
 }
+
 
 h6 {
     text-align: center;
