--- a/app/assets/stylesheets/components/_new_urgence.scss
+++ b/app/assets/stylesheets/components/_new_urgence.scss
@@ -1,67 +1,23 @@
 .container_simple_form {
-    width: 100%;
-    height: 70vh;
     margin-top: 20%;
     display: flex;
     justify-content: center;
     text-align: center;
+    width: 90%;
+    padding: 33px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.2);
+    border-radius: 20px;
+    
 }
 
 .btn-next-child {
 width: 145px;
 height: 50px;
-border: 1px solid #66BBEC;
-background-color: #66BBEC;
+border: 1px solid #FE7988;;
+background-color: #FE7988;;
 color: white;
 font-weight: bolder;
 border-radius: 20px;
+margin: 8px;
 }
 
-.antecedents-text {
-    text-align: center;
-    font-style: normal;
-}
-
-.input-line {
-border-color: #66BBEC;
-border-radius: 10px;
-}
-
-.clickable {
-    padding: 10px;
-    border: 1px solid #66BBEC;
-    margin-bottom: 10px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .clickable i {
-    font-size: 20px;
-    margin-bottom: 10px;
-  }
-  
-.clickable:hover {
-    border-color: #0584CE;
-  }
-
-  .clickable.active {
-    color: inherit;
-    border-color: inherit;
-  }
-
-  .form-control {
-      box-shadow: none !important;
-  }
-
-  input[type=checkbox].hidden{
-   display:none;
-}
-
-.clickable.active i {
-    color: #52ACF4;
-  }
-  
-  .form-check-input {
-    list-style-type: none !important;
-  }
