--- a/app/views/diseases/consult.html.erb
+++ b/app/views/diseases/consult.html.erb
@@ -7,7 +7,7 @@
 		<%= link_to "Précédent", :back, class: "btn btn-outline-primary-precedent" %>
 	</div>
 	<div class="container-card px-4 py-3 ">
-		<h1 class="d-flex justify-content-center">Quand consulter ?</h1>
+		<h1 class="d-flex justify-content-center"><%= @disease.name %>: Quand consulter ?</h1>
 		<p><%= raw @disease.when_consult %></p>
 	</div>
 	<footer>
