--- a/app/views/diseases/need_know.html.erb
+++ b/app/views/diseases/need_know.html.erb
@@ -7,7 +7,7 @@
 		<%= link_to "Précédent", :back, class: "btn btn-outline-primary-precedent" %>
 	</div>
 	<div class="container-card px-4 py-3 ">
-		<h1 class="d-flex justify-content-center">Ce qu'il faut savoir</h1>
+		<h1 class="d-flex justify-content-center"><%= @disease.name %>: Ce qu'il faut savoir</h1>
 		<p><%= raw @disease.need_know %></p>
 	</div>
 	<footer>
