ajout des bon numéros

--- a/app/views/hospitals/direction.html.erb
+++ b/app/views/hospitals/direction.html.erb
@@ -3,12 +3,12 @@
 	<h6>Trouvez l'hôpital le plus proche de vous.</h6>
 	
 <div id="container-secours">
-	<a href="tel:0616403054">
+	<a href="tel:112">
 		<%= image_tag "UE_SECOURS.png", class: "image-secours" %>
 	</a>
-	<a href="tel:0616403054">
+	<a href="tel:18">
 	<%= image_tag "POMPIER_SECOURS.png", class: "image-secours" %></a>
-	<a href="tel:0616403054">
+	<a href="tel:15">
 	<%= image_tag "SAMU_SECOURS.png", class: "image-secours" %></a>
 </div>
 <footer>
