--- a/app/assets/stylesheets/components/_login.scss
+++ b/app/assets/stylesheets/components/_login.scss
@@ -34,7 +34,7 @@
     border: 1px solid lightgrey;
     border-radius: 25px;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
-    color: black;
+   color:#95999A;
     width: 330px;
     height: 38px;
     background-color: #EBEFEA;
@@ -42,7 +42,7 @@
 }
 
 .btn-link-login:hover {
-    color: black;
+    color:#95999A;
     text-decoration: none;
 }
 
@@ -54,11 +54,11 @@
     width: 150px;
     border-radius: 5px;
     background-color: #EBEFEA;
-    color: black;
+    color:#95999A;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
 }
 
 .btn-connexion:hover {
     text-decoration: none;
-    color: black;
+   color:#95999A;
 }
