--- a/app/assets/stylesheets/components/_new_urgence.scss
+++ b/app/assets/stylesheets/components/_new_urgence.scss
@@ -14,11 +14,16 @@
 	height: 50px;
 	border: 1px solid #FE7988;;
 	background-color: #FE7988;;
-	color: white;
+	color:#95999A;
 	font-weight: bolder;
 	border-radius: 20px;
 	margin-left: 30%;
 	margin-top: 10px;
+}
+
+.btn-next-child:hover{
+	color:#95999A;
+	text-decoration: none;
 }
 
 
