--- a/app/assets/stylesheets/components/_profil.scss
+++ b/app/assets/stylesheets/components/_profil.scss
@@ -63,13 +63,13 @@
     width: 140px;
     border-radius: 5px;
     background-color: #EBEFEA;
-    color: black;
+    color:#95999A;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
     text-align: center;
 }
 
 .btn-deconnexion:hover {
-    color: black;
+    color:#95999A;
     text-decoration: none;
 }
 
@@ -78,22 +78,22 @@
     width: 210px;
     border-radius: 5px;
     background-color: #EBEFEA;
-    color: black;
+    color:#95999A;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
     text-align: center;
     text-decoration: none;
 }
 
 .btn-ajout-enfant:hover {
-    color: black;
+    color:#95999A;
     text-decoration: none;
 }
 
 .link-cards {
-    color: black;
+    color:#95999A;
 }
 
 .link-cards:hover {
-    color: black;
+    color:#95999A;
     text-decoration: none;
 }
