--- a/app/assets/stylesheets/components/_index_diseases.scss
+++ b/app/assets/stylesheets/components/_index_diseases.scss
@@ -5,6 +5,7 @@
     border-radius: 5px;
     margin: 20px;
     min-width: 300px;
+    color:#95999A;
 }
 
 .card-diseases {
@@ -14,19 +15,20 @@
     border-radius: 5px;
     height: 70vh;
     border-color: #DCDCDC;
+    color:#95999A;
 }
 
 .list-diseases {
     background-color: #FE7988;
-    color: white;
     display: inline-block;
     transform: skewX(-15deg);
     margin: 15px;
     min-width: 300px;
     text-align: center;
+    color:#95999A;
 }
 
 .list-diseases:hover {
     text-decoration: none;
-    color: white;
+    color:#95999A;
 }
