--- a/app/assets/stylesheets/components/_page-checkbox.scss
+++ b/app/assets/stylesheets/components/_page-checkbox.scss
@@ -130,7 +130,7 @@ code {
     height: 79px;
     border: 1px solid #66BBEC;
     background-color: #66BBEC;
-    color: white;
+    color:#95999A;
     font-weight: bolder;
     border-radius: 25px;
     border-radius: 20px;
@@ -140,5 +140,5 @@ code {
 
 .btn-analyse-home:hover {
     text-decoration: none;
-    color: white;
+   color:#95999A;
 }
