--- a/app/assets/stylesheets/components/_profil.scss
+++ b/app/assets/stylesheets/components/_profil.scss
@@ -51,21 +51,21 @@
 
 #deco-ajout {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    margin-bottom: 15px;
-    margin-top: -35px;
     height: 25vh;
+    padding:10px;
 }
 
 .btn-deconnexion {
-    margin: 35px;
     width: 140px;
     border-radius: 5px;
     background-color: #EBEFEA;
     color:#95999A;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
     text-align: center;
+    padding: 2px;
+    margin: 8px;
 }
 
 .btn-deconnexion:hover {
@@ -74,7 +74,6 @@
 }
 
 .btn-ajout-enfant {
-    margin: 35px;
     width: 210px;
     border-radius: 5px;
     background-color: #EBEFEA;
@@ -82,6 +81,8 @@
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
     text-align: center;
     text-decoration: none;
+    padding: 2px;
+    margin: 8px;
 }
 
 .btn-ajout-enfant:hover {
