--- a/app/views/pages/profil.html.erb
+++ b/app/views/pages/profil.html.erb
@@ -17,14 +17,14 @@
                     <li><%= child.first_name %></li>
                     <li><%= child.birth_date %></li>
                     <li><%= child.weight %>(kg)</li>
-                    <li>Cardiac <%= child.cardiac %></li>
-                    <li>Respiratory <%= child.respiratory %></li>
-                    <li>Prematurity <%= child.prematurity %></li>
+                    <li>Problème cardiaque <%= child.cardiac %></li>
+                    <li>Problème respiratoire <%= child.respiratory %></li>
+                    <li>Problème prematuré <%= child.prematurity %></li>
                     <div class="edit">
                         <li><%= link_to "🖊", edit_child_path(child)%></li>
                     </div>
                     <div class="trash">
-                        <li><%= link_to "❌", child, method: :delete, data: { confirm: "Are you sure ?" } %></li>
+                        <li><%= link_to "❌", child, method: :delete, data: { confirm: "Êtes-vous sur ?" } %></li>
                     </div>
                 </div>
             </ul>
