--- a/app/views/pages/profil.html.erb
+++ b/app/views/pages/profil.html.erb
@@ -19,7 +19,7 @@
                     <li><%= child.weight %>(kg)</li>
                     <li>Problème cardiaque <%= child.cardiac %></li>
                     <li>Problème respiratoire <%= child.respiratory %></li>
-                    <li>Problème prematuré <%= child.prematurity %></li>
+                    <li>Prematuré <%= child.prematurity %></li>
                     <div class="edit">
                         <li><%= link_to "🖊", edit_child_path(child)%></li>
                     </div>
