--- a/app/views/diseases/behavior.html.erb
+++ b/app/views/diseases/behavior.html.erb
@@ -16,7 +16,7 @@
 		<div id="navbar-contenair">
 			<div class="icon_name">
 			<i class="fas fa-home"></i>
-			<%= link_to "Home", root_path, class: "link-footer" %>
+			<%= link_to "Accueil", root_path, class: "link-footer" %>
 			</div>
 			<div class="icon_name">
 			<i class="far fa-user-circle"></i>
