Title in disease_new modified

--- a/app/views/analyses/new.html.erb
+++ b/app/views/analyses/new.html.erb
@@ -1,4 +1,4 @@
-<h2 class="titre-checkbox">Symptomes</h2>
+ <h2 class="mt-3">Symptomes</h2>
 
 <!-- <form class="form"> -->
 <div class="container">
