Print a message if multiples symptoms

--- a/app/views/diseases/index.html.erb
+++ b/app/views/diseases/index.html.erb
@@ -1,7 +1,6 @@
-<div id="contenair-global">
-<div class="card-title">
-	<h1 class="d-flex justify-content-center">Index</h1>
-</div>
+
+<h1 class="mt-3">Index</h1>
+
 <div class="prev-container px-4 py-3">
 	<div class="card-diseases d-flex justify-content-center">
 		<div class="test">
