--- a/app/assets/stylesheets/components/_page-checkbox.scss
+++ b/app/assets/stylesheets/components/_page-checkbox.scss
@@ -134,7 +134,9 @@ code {
     font-weight: bolder;
     border-radius: 25px;
     border-radius: 20px;
-    margin-left: 23%;
+    margin-left: 20%;
+    margin-bottom: 25%;
+    margin-top: 1%;
 }
 
 .btn-analyse-home:hover {
