--- a/app/assets/stylesheets/components/_login.scss
+++ b/app/assets/stylesheets/components/_login.scss
@@ -18,6 +18,14 @@
     border-radius: 25px;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
     margin-bottom: 15px;
+    max-width: 90vw;
+}
+
+.form-inputs-login{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .form-actions {
