--- a/app/assets/stylesheets/components/_new_urgence.scss
+++ b/app/assets/stylesheets/components/_new_urgence.scss
@@ -1,5 +1,4 @@
 .container_simple_form {
-
     margin: 20% auto 0px;
     justify-content: center;
     text-align: center;
@@ -10,11 +9,23 @@
     color:#95999A;
 }
 
+#child_birth_date_1i{
+	padding:2.5% !important;
+}
+
+#child_birth_date_2i{
+  padding:0 !important;
+}
+
+#child_birth_date_3i{
+  padding:2.8% !important;
+}
+
 .btn-next-child {
 	width: 145px;
 	height: 50px;
-	border: 1px solid #FE7988;;
-	background-color: #FE7988;;
+	border: 1px solid #FE7988;
+	background-color: #FE7988;
 	color:white;
 	font-weight: bolder;
 	border-radius: 20px;
